# fastapi-celery

./: .dockerignore  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  env.example  langgraph.json  main.py  pyproject.toml
agent/: match_fundamentals_analyst.py
alembic/: env.py
alembic/versions/: 0001_create_leagues.py  0002_create_fixtures.py  0003_create_selected_fixtures.py  0004_selected_leagues_and_trigger.py  0005_create_odds_quotes.py  0006_add_ai_eval_translations_to_selected_fixtures.py  0007_create_ai_eval_table.py
app/: celery_app.py  db.py  main.py  models.py  notify.py  settings.py  tasks.py
data_fetcher/: fixtures.py  leagues.py  odds.py
test/: get_fixtures.py  get_leagues.py  get_odds.py  get_odds_bets.py  get_odds_bookmakers.py
test/output/: fixtures_2025-12-17.json  odds_1490830.json  odds_mappings.json
